# DocTest_LibTest

./: .gitmodules  CMakeLists.txt  README.MD
MyLibrary/: CMakeLists.txt  DocTestRegister.cpp  lib1.cpp  lib2.cpp
MyMainProgram/: CMakeLists.txt  main.cpp
doctest/: doctest.h  doctest_main.cpp
doctest_main/: doctest_main.cpp
doctest_registerlibrary/: doctest_registerlibrary.cmake  doctest_registerlibrary.py
